# galileo-callback

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
galileo_callback/: main.py  model.py
